# SideScroller-1

./: SideScroller-Attempt1.slnx
.github/workflows/: qodana_code_quality.yml
Assets/Animations/: Player.controller  PlayerFall.anim  PlayerWallSlide.anim
Assets/InputSystem/: PlayerInputSystem.cs  PlayerInputSystem.inputactions
Assets/Prefabs/: OptionButton.prefab
Assets/Scenes/: SampleScene.unity
Assets/Scripts/: EntityState.cs  GroundedState.cs  Player.cs  PlayerAiredState.cs  PlayerFallState.cs  PlayerIdleState.cs  (+3 more)
ProjectSettings/: Physics2DSettings.asset  ProjectSettings.asset  TagManager.asset
backend/: .env.example  pyproject.toml
backend/app/: config.py  graph.py  main.py  schemas.py  state.py
backend/app/llm/: __init__.py  client.py  schemas.py
backend/app/nodes/: __init__.py  build_response.py  classify_intent.py  generate_response.py  load_context.py  route_mode.py  validate_output.py  validate_request.py
backend/app/prompts/: generated_response.py  intent_classifier.py
backend/app/tools/: __init__.py  game_data_tools.py  json_loader.py  loot_tools.py  paths.py  registry.py
backend/data/dialogue_nodes/: mira_main.json
backend/data/generation_policies/: weekly_loot.json
backend/data/loot_tables/: weekly_loot.json
backend/data/lore/: public_lore.json
backend/data/npcs/: mira_village_lass.json
backend/docs/: ADDING_AI_NPCS.md  DIALOGUE_TEXT_AND_NPC_SETUP.md  STARTING_BACKEND.md
backend/tests/: test_graph.py  test_llm_mode.py  test_main.py  test_nodes.py  test_project_consistency.py  test_schemas.py  test_state.py  test_tools.py
(+390 files in other folders)
